--- a/Prevu.Synoptics.V4035_EcoGreen/PlantView.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/PlantView.xaml
@@ -329,7 +329,6 @@
         <Separation:SA_Elutriator  Width="52" Canvas.Left="1044" Canvas.Top="561" Height="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="1745" Canvas.Top="731" Height="154" Width="124" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="2170" Canvas.Top="984" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="477" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="2137" Canvas.Top="639" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="020" Canvas.Left="396" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="100" Canvas.Left="772" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -348,14 +347,13 @@
         <Labels:DeviceLabel x:Name="HMI_01" ComponentName="HMI-01" Canvas.Left="146" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q51" ComponentName="Q51" Canvas.Left="1963" Canvas.Top="932" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="1794" Canvas.Top="328" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel x:Name="Q61" ComponentName="Q71" Canvas.Left="1042" Canvas.Top="932" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel x:Name="S210" ComponentName="S210" Canvas.Left="1033" Canvas.Top="363" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q61" ComponentName="Q61" Canvas.Left="1042" Canvas.Top="932" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel x:Name="S210" ComponentName="S210" Canvas.Left="531" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S410" ComponentName="S410" Canvas.Left="1977" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S510" ComponentName="S510" Canvas.Left="1900" Canvas.Top="818" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel x:Name="S610" ComponentName="S710" Canvas.Left="1197" Canvas.Top="602" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S610" ComponentName="S610" Canvas.Left="1197" Canvas.Top="602" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1170" Canvas.Top="782" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="HMI_01_Copia" ComponentName="HMI-02" Canvas.Left="2152" Canvas.Top="933" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel x:Name="HMI_01_Copia1" ComponentName="HMI-03" Canvas.Left="460" Canvas.Top="808" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="326" Canvas.Left="282" Canvas.Top="190" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
@@ -368,8 +366,8 @@
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="416" Canvas.Left="32" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="425" Canvas.Left="444" Canvas.Top="352" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="288" Canvas.Left="736" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="734" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:GroupLabel GroupName="288" Canvas.Left="757" Canvas.Top="129" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="757" Canvas.Top="219" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -511,5 +509,12 @@
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="557" Canvas.Left="935" Canvas.Top="911" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel x:Name="Q21_Copia" ComponentName="Q31" Canvas.Left="1077" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q21_Copia1" ComponentName="Q40" Canvas.Left="678" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S210_Copia" ComponentName="S400" Canvas.Left="484" Canvas.Top="118" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S210_Copia1" ComponentName="S310" Canvas.Left="1077" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q61_Copia" ComponentName="Q91" Canvas.Left="695" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S610_Copia" ComponentName="S910" Canvas.Left="804" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="273" Canvas.Left="816" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
